Code optimization, refactoring